# vim-cmake-boilerplate

./: .gitignore  CMakeLists.txt  README.md
config/: vimrc
include/: Config.h.in
lib/interp/: CMakeLists.txt  interpolate.cpp  interpolate.h
src/: main.cpp
